# lintel

./: .gitignore  .gitmodules  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  devenv.nix  devenv.yaml  flake.nix  lintel.toml  npm-release-binaries.toml  release-plz.toml  secretspec.toml
crates/ansi-term-codes/: Cargo.toml  README.md
crates/ansi-term-codes/src/: lib.rs
crates/cargo-furnish/: CHANGELOG.md  Cargo.toml  README.md
crates/cargo-furnish/src/: cargo_toml.rs  doc_injection.rs  main.rs  readme.rs  workspace.rs
crates/cargo-furnish/src/commands/: check.rs  update.rs
crates/combine-structs/: CHANGELOG.md  Cargo.toml  README.md
crates/combine-structs/src/: lib.rs
crates/combine-structs/tests/: integration.rs
crates/combine-structs/tests/compile_fail/: fields_on_enum.rs  fields_on_enum.stderr  fields_on_tuple_struct.rs  fields_on_tuple_struct.stderr  unknown_source.rs  unknown_source.stderr
crates/dprint-config/: CHANGELOG.md  Cargo.toml  README.md
crates/dprint-config/src/: json.rs  lib.rs  markdown.rs  toml.rs  typescript.rs
crates/glob-matcher/: Cargo.toml  README.md
crates/glob-matcher/benches/: bench.rs
crates/glob-matcher/src/: lib.rs  syntax.rs
crates/glob-set/: CHANGELOG.md  Cargo.toml  README.md
crates/glob-set/benches/: bench.rs
crates/glob-set/src/: engine.rs  error.rs  glob.rs  lib.rs  literal.rs  map.rs  parse.rs  set.rs  strategy.rs  tinyset.rs
crates/glob-set/tests/: globset_compat.rs
crates/jsonschema-explain/: CHANGELOG.md  Cargo.toml  README.md
crates/jsonschema-explain/src/: fmt.rs  lib.rs  man.rs  render.rs  schema.rs  sections.rs
crates/jsonschema-explain/tests/: tsconfig.rs
crates/jsonschema-migrate/: CHANGELOG.md  Cargo.toml  README.md
crates/jsonschema-migrate/src/: draft.rs  keywords.rs  lib.rs  regex.rs
crates/jsonschema-migrate/src/builder/: bounds.rs  cleanup.rs  deps.rs  id.rs  items.rs  mod.rs
crates/jsonschema-migrate/tests/: cargo_manifest.rs  chrome_manifest.rs  fixtures.rs  sanitize.rs  sarif.rs  schema_deserialization.rs  specif.rs  yamllint.rs
crates/jsonschema-migrate/tests/fixtures/: cloudinit.json  flagd.json  ninjs.json  uet.json  utcm-monitor.json  wiremock.json
crates/jsonschema-schema/: CHANGELOG.md  Cargo.toml  README.md
crates/jsonschema-schema/src/: absolute.rs  ext_lintel.rs  ext_taplo.rs  ext_tombi.rs  flatten.rs  lib.rs  schema.rs  validate.rs
crates/jsonschema-schema/src/extensions/: intellij.rs  lintel.rs  mod.rs  taplo.rs  tombi.rs
crates/jsonschema-schema/src/schema/: add.rs  mod.rs  navigate.rs  tests.rs
crates/jsonschema-schema/tests/fixtures/: declarationBlock.json
crates/lintel/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-annotate/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-annotate/src/: lib.rs  main.rs
crates/lintel-benchmark/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-benchmark/src/: main.rs  report.rs  runner.rs  tools.rs
crates/lintel-benchmark/src/commands/: run.rs  setup.rs
crates/lintel-catalog-builder/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-catalog-builder/src/: catalog.rs  config.rs  download.rs  lib.rs  main.rs  refs.rs
crates/lintel-catalog-builder/src/commands/: generate.rs
crates/lintel-catalog-builder/src/generate/: groups.rs  mod.rs  sources.rs  util.rs
crates/lintel-catalog-builder/src/html/: assets.rs  context.rs  engine.rs  mod.rs  schema_doc.rs  search.rs
crates/lintel-catalog-builder/src/postprocess/: fix_ref_uris.rs  inject_lintel.rs  linkify_descriptions.rs  mod.rs  reorder_schema_keys.rs
crates/lintel-catalog-builder/src/targets/: dir.rs  github_pages.rs  mod.rs
crates/lintel-check/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-check/src/: catalog.rs  config.rs  diagnostics.rs  discover.rs  lib.rs  registry.rs  retriever.rs  validate.rs
crates/lintel-check/src/parsers/: json.rs  json5.rs  jsonc.rs  markdown.rs  mod.rs  toml_parser.rs  yaml.rs
crates/lintel-check/testdata/malformed/: bad.yaml
crates/lintel-check/testdata/negative_tests/: missing_name.json  (+2 more)
crates/lintel-cli-common/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-cli-common/src/: lib.rs
crates/lintel-config/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-config-schema-generator/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-config-schema-generator/src/: main.rs
crates/lintel-config/src/: config.rs  context.rs  discover.rs  lib.rs  main.rs
crates/lintel-diagnostics/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-diagnostics/src/: diagnostics.rs  lib.rs  reporter.rs
crates/lintel-explain/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-explain/src/: inline.rs  lib.rs  path.rs  resolve.rs
crates/lintel-format/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-format/src/: format.rs  lib.rs  main.rs  toml.rs
crates/lintel-github-action/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-github-action/src/: lib.rs  main.rs
crates/lintel-identify/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-identify/src/: lib.rs
crates/lintel-reporters/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-reporters/src/: lib.rs  reporter.rs
crates/lintel-schema/: CHANGELOG.md  Cargo.toml
crates/lintel-schema-cache/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-schema-cache/src/: lib.rs
crates/lintel-schema/src/: lib.rs
crates/lintel-schemastore-catalog/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-schemastore-catalog/src/: catalog.rs  download.rs  main.rs
crates/lintel-validate/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/lintel-validate/src/: catalog.rs  diagnostics.rs  discover.rs  lib.rs  registry.rs  reporter.rs  retriever.rs  suggest.rs  validate.rs
crates/lintel-validation-cache/: CHANGELOG.md  Cargo.toml  README.md
crates/lintel-validation-cache/src/: lib.rs  validation_error.rs
crates/lintel/src/: main.rs
crates/lintel/tests/: e2e.rs
crates/markdown-to-ansi/: CHANGELOG.md  Cargo.toml  README.md
crates/markdown-to-ansi/src/: highlight.rs  lib.rs  render.rs  wrap.rs
(+203 files in other folders)
