[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/lintel-rs/lintel"
license = "Apache-2.0"
authors = ["Ian Macalinao <me@ianm.com>"]
homepage = "https://github.com/lintel-rs/lintel"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
unwrap_used = "deny"
