[package]
name = "cargo-furnish"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
description = "Furnish Rust crates with standardized Cargo.toml metadata, READMEs, and doc attributes"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cargo", "metadata", "readme", "workspace"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
ansi-term-codes = { version = "0.1.0", path = "../ansi-term-codes" }
toml_edit = "0.25"
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
glob = "0.3"
