[package]
name = "cargo-furnish"
version = "0.0.8"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["cargo", "metadata", "readme", "workspace"]
license.workspace = true
repository.workspace = true
description = "Furnish Rust crates with standardized Cargo.toml metadata, READMEs, and doc attributes"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
anyhow = "1"
bpaf = { version = "0.9", features = ["autocomplete", "derive", "bright-color", "docgen"] }
glob = "0.3"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
toml_edit = "0.25"
