[package]
name = "combine-structs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Derive macro that generates callback macros for struct field merging"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
