[package]
name = "combine-structs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Proc macros for compile-time struct field merging. #[derive(Fields)] captures a struct's fields into a callback macro, and #[combine_fields(A, B, C)] merges fields from multiple source structs into a single target struct at compile time."
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["proc-macro", "derive", "struct", "merge"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
