[package]
name = "glob-matcher"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
description = "A `no_std` fork of glob-match -- fast glob pattern matching"
license = "MIT"
repository.workspace = true
homepage.workspace = true
keywords = ["glob", "pattern", "matching"]
categories = ["no-std"]

[lints]
workspace = true

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4.0"
glob = "0.3.1"
globset = "0.4.10"
