[package]
name = "jsonschema-explain"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
description = "Render JSON Schema as human-readable terminal documentation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "documentation", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
ansi-term-codes = { version = "0.1.0", path = "../ansi-term-codes" }
serde_json = "1"
markdown-to-ansi = { version = "0.1.2", path = "../markdown-to-ansi" }
