[package]
name = "jsonschema-explain"
version = "0.2.4"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "documentation", "terminal", "cli"]
license.workspace = true
repository.workspace = true
description = "Render JSON Schema as human-readable terminal documentation"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
markdown-to-ansi = "0.2.0"
serde_json.workspace = true
