[package]
name = "jsonschema-migrate"
version = "0.1.0"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "migration"]
license.workspace = true
repository.workspace = true
description = "Migrate JSON Schema documents to draft 2020-12"

[lints]
workspace = true

[dependencies]
serde_json.workspace = true

[dev-dependencies]
regex-syntax = "0.8.10"
