[package]
name = "lintel-annotate"
version = "0.0.11"
edition.workspace = true
authors.workspace = true
description = "Add schema annotations to JSON, YAML, and TOML files"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "annotation", "linter"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
lintel-config = { version = "0.0.6", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.10", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.5", path = "../lintel-validate" }
lintel-cli-common = { version = "0.0.4", path = "../lintel-cli-common" }
schemastore = { version = "0.0.9", path = "../schemastore" }
bpaf = { version = "0.9", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
