[package]
name = "lintel-annotate"
version = "0.0.11"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "annotation", "linter"]
license.workspace = true
repository.workspace = true
description = "Add schema annotations to JSON, YAML, and TOML files"

[lints]
workspace = true

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive"] }
lintel-cli-common = { version = "0.0.4", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.6", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.10", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.5", path = "../lintel-validate" }
schema-catalog = { version = "0.0.5", path = "../schema-catalog" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
