[package]
name = "lintel-annotate"
version = "0.0.15"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "annotation", "linter"]
license.workspace = true
repository.workspace = true
description = "Add schema annotations to JSON, YAML, and TOML files"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
lintel-cli-common = { version = "0.0.6", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.8", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.12", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.9", path = "../lintel-validate" }
schema-catalog = { version = "0.0.9", path = "../schema-catalog" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
