[package]
name = "lintel-benchmark"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
description = "Benchmarking harness for Lintel — runs validation against real-world repos and records timing results"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "benchmark", "validation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
chrono = "0.4"
dirs = "6"
walkdir = "2"

[lints]
workspace = true
