[package]
name = "lintel-benchmark"
version = "0.0.6"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "benchmark", "validation"]
license.workspace = true
repository.workspace = true
description = "Benchmarking harness for Lintel — runs validation against real-world repos and records timing results"

[lints]
workspace = true

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
chrono = "0.4"
dirs = "6"
walkdir = "2"
