[package]
name = "lintel-benchmark"
version = "0.0.8"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "benchmark", "validation"]
license.workspace = true
repository.workspace = true
description = "Benchmarking harness for Lintel — runs validation against real-world repos and records timing results"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf = { workspace = true, features = ["bright-color"] }
chrono = "0.4.44"
dirs = "6.0.0"
walkdir = "2.5.0"
