[package]
name = "lintel-catalog-builder"
version = "0.0.17"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "catalog"]
license.workspace = true
repository.workspace = true
description = "Build a custom schema catalog from local schemas and external sources"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf = { workspace = true, features = ["autocomplete", "bright-color", "docgen"] }
futures-util = "0.3.32"
jsonschema.workspace = true
jsonschema-migrate = { version = "0.1.4", path = "../jsonschema-migrate" }
lintel-schema-cache = { version = "0.0.14", path = "../lintel-schema-cache" }
minijinja = { version = "2.17.1", features = ["builtins"] }
percent-encoding = "2.3.2"
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
reqwest.workspace = true
schema-catalog = { version = "0.0.9", path = "../schema-catalog" }
schemars.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "process"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
url = "2.5.8"

[dev-dependencies]
tempfile.workspace = true
