[package]
name = "lintel-check"
version = "0.0.18"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "toml", "linter"]
license.workspace = true
repository.workspace = true
description = "Check command for Lintel — runs schema validation and additional checks"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
lintel-diagnostics = { version = "0.0.2", path = "../lintel-diagnostics" }
lintel-format = { version = "0.0.6", path = "../lintel-format" }
lintel-validate = { version = "0.0.11", path = "../lintel-validate" }
