[package]
name = "lintel-check"
version = "0.0.19"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "toml", "linter"]
license.workspace = true
repository.workspace = true
description = "Check command for Lintel — runs schema validation and additional checks"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
lintel-config = { version = "0.0.9", path = "../lintel-config" }
lintel-diagnostics = { version = "0.0.3", path = "../lintel-diagnostics" }
lintel-format = { version = "0.0.7", path = "../lintel-format" }
lintel-validate = { version = "0.0.12", path = "../lintel-validate" }
