[package]
name = "lintel-cli-common"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
description = "Shared CLI global options for Lintel command-line tools"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "linter", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
humantime = "2"
