[package]
name = "lintel-cli-common"
version = "0.0.4"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "linter", "cli"]
license.workspace = true
repository.workspace = true
description = "Shared CLI global options for Lintel command-line tools"

[lints]
workspace = true

[dependencies]
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
humantime = "2"
