[package]
name = "lintel-cli-common"
version = "0.0.6"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "linter", "cli"]
license.workspace = true
repository.workspace = true
description = "Shared CLI global options for Lintel command-line tools"

[lints]
workspace = true

[dependencies]
bpaf = { workspace = true, features = ["bright-color"] }
humantime = "2.3.0"
