[package]
name = "lintel-config-schema-generator"
version = "0.0.11"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "config", "codegen"]
license.workspace = true
repository.workspace = true
description = "Generate JSON Schemas for Lintel configuration files (lintel.toml, lintel-catalog.toml)"

[lints]
workspace = true

[dependencies]
bpaf.workspace = true
lintel-catalog-builder = { version = "0.0.16", path = "../lintel-catalog-builder" }
lintel-config = { version = "0.0.9", path = "../lintel-config" }
schema-catalog = { version = "0.0.9", path = "../schema-catalog" }
serde_json.workspace = true
