[package]
name = "lintel-config"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
description = "Configuration types and loader for Lintel (lintel.toml)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "config"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "1.0"
anyhow = "1"
glob-match = "0.2"

[dev-dependencies]
tempfile = "3"
