[package]
name = "lintel-config"
version = "0.0.6"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "config"]
license.workspace = true
repository.workspace = true
description = "Configuration types and loader for Lintel (lintel.toml)"

[lints]
workspace = true

[dependencies]
anyhow = "1"
glob-match = "0.2"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

[dev-dependencies]
tempfile = "3"
