[package]
name = "lintel-config"
version = "0.0.7"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "config"]
license.workspace = true
repository.workspace = true
description = "Configuration types and loader for Lintel (lintel.toml)"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dprint-config = { version = "0.0.2", path = "../dprint-config" }
glob-match.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
