[package]
name = "lintel-explain"
version = "0.0.7"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "documentation", "terminal", "cli"]
license.workspace = true
repository.workspace = true
description = "Inspect JSON Schema documentation for specific properties"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
jsonschema-explain = { version = "0.2.5", path = "../jsonschema-explain" }
lintel-cli-common = { version = "0.0.5", path = "../lintel-cli-common" }
lintel-diagnostics = { version = "0.0.1", path = "../lintel-diagnostics" }
lintel-identify = { version = "0.0.10", path = "../lintel-identify" }
lintel-validate = { version = "0.0.7", path = "../lintel-validate" }
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
terminal_size = "0.4.3"
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
