[package]
name = "lintel-format"
version = "0.0.1"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json", "yaml", "toml", "markdown", "formatter"]
license.workspace = true
repository.workspace = true
description = "Format command for Lintel — formats JSON, YAML, TOML, and Markdown files using dprint"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
anyhow = "1"
bpaf = { version = "0.9", features = ["derive"] }
dprint-config = { version = "0.0.1", path = "../dprint-config" }
dprint-core = "0.67"
dprint-plugin-json = "0.21"
dprint-plugin-markdown = "0.21"
dprint-plugin-toml = "0.7"
glob = "0.3"
glob-match = "0.2"
ignore = "0.4"
lintel-config = { version = "0.0.6", path = "../lintel-config" }
miette = { version = "7", features = ["fancy"] }
pretty_yaml = "0.6"
semver = "1"
serde_json = "1"
similar = "2"
thiserror = "2"
toml_edit = "0.25"
