[package]
name = "lintel-format"
version = "0.0.1"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json", "yaml", "toml", "markdown", "formatter"]
license.workspace = true
repository.workspace = true
description = "Format command for Lintel — formats JSON, YAML, TOML, and Markdown files using dprint"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
anyhow.workspace = true
bpaf.workspace = true
dprint-config = { version = "0.0.1", path = "../dprint-config" }
dprint-core = "0.67.4"
dprint-plugin-json = "0.21.1"
dprint-plugin-markdown = "0.21.1"
dprint-plugin-toml = "0.7.0"
glob.workspace = true
glob-match.workspace = true
ignore.workspace = true
lintel-config = { version = "0.0.6", path = "../lintel-config" }
miette = { workspace = true, features = ["fancy"] }
pretty_yaml = "0.6.0"
semver = "1.0.27"
serde_json.workspace = true
similar = "2.7.0"
thiserror.workspace = true
toml_edit.workspace = true
