[package]
name = "lintel-github-action"
version = "0.0.13"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "github-action", "linter"]
license.workspace = true
repository.workspace = true
description = "GitHub Action support for Lintel — creates Check Runs with inline annotations"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
lintel-check = { version = "0.0.15", path = "../lintel-check" }
lintel-format = { version = "0.0.3", path = "../lintel-format" }
lintel-validate = { version = "0.0.8", path = "../lintel-validate" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
